--- a/2019.html
+++ b/2019.html
@@ -38,7 +38,7 @@
   
   <p>
       <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
-      <h6> Sign Up </h6> 
+      <h6 style="margin-bottom: 2px;" > Sign Up </h6> 
       <form> 
         <table><tr> <td> First Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type="text" name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type="email" email="text"> </td> </tr> </table> 
       </form> 
