--- a/Solutions.html
+++ b/Solutions.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Shipment Delays</title>
-
+    <style>
+        a:hover{
+        text-decoration: underline;
+        }
+      </style>
 </head>
 <body>
     <h1> <strong>Shipment Delays Causes </strong></h1>    
