--- a/2021.html
+++ b/2021.html
@@ -7,6 +7,11 @@
     <title>Shipment Delays</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    a:hover{
+    text-decoration: underline;
+    }
+  </style>
 <body>
  
     <h1> Shipment Delays in 2021 </h1>
