--- a/Resources.html
+++ b/Resources.html
@@ -17,6 +17,7 @@
   h2 {
     color: rgb(0, 0, 0);
     font-size: 50px;
+    margin-bottom: 2px;
   }
   h3 {
     font-size: 45px;
@@ -34,6 +35,7 @@
   }
   p {
     font-size: 20px;
+    margin-top: 2px;
   }
   body{
       background-color: #fffffe
@@ -52,6 +54,7 @@
   }
   ul {
     font-size: 20px;
+    margin-top: 4px;
 
   }
   
@@ -59,12 +62,19 @@
 
 
   footer{
-      display: flex;
+      display:flow-root;
       justify-content: center;
       padding: 5px;
       background-color: #90b4ce;
       color: #fff;
   }
+  a:link{
+    color: #094067;
+    text-decoration: none;
+  }
+  a:hover{
+        text-decoration: underline;
+        }
 </style>
 
 
@@ -72,6 +82,7 @@
     <h1>Shipment Delays Causes</h1>
     <iframe frameborder="0" src="navigation.html" width = "757" height = "80"></iframe>
     <h2> Resources</h2>
+    <img src="infopic.jpg" alt="Information banner" width = "750" height = "400">
     <p> Here you will find external resources to do reseach on your own. </p>
 
     <h4>Text References</h4>
@@ -90,6 +101,8 @@
         <li><a href="https://images.unsplash.com/photo-1597139416651-bf9a3b3e9014?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2044&q=80">Cargo 2021 </a></li>
         
     </ul>
+
+    <br> <br> <br><br>
       <footer>
       <p>Maria Yagual</p>
       <br><br>
