--- a/navigation.html
+++ b/navigation.html
@@ -17,8 +17,7 @@
         <li><a href="2020.html" target="_parent"> 2020</a></li>
         <li><a href="2021.html" target="_parent">2021</a></li>
         <li><a href="Solutions.html" target="_parent">Possible Solutions</a></li>
-        <li><a href="Sign_Up.html" target="_parent">Sign Up</a></li>
-        <li><a href="Survey.html" target="_parent">Survey</a></li>
+        <li><a href="Survey.html" target="_parent">Sign Up - Survey</a></li>
         <li><a href="Resources.html" target="_parent">Resources</a></li>
         
     </ul>
