--- a/2019.html
+++ b/2019.html
@@ -34,7 +34,15 @@
 <h4>How were shipments before the pandemic?</h4>
 
 
-<img src="CargoB.jpg" alt="front" width = "750" height = "300"> 
+
+<picture>
+  <source srcset="CargoB_optimized.jpeg" media="(min-width:767px)"/>
+  <img src="CargoB.jpeg" alt="Cargo picture 1" width = "756" height = "300">
+</picture>
+
+ 
+
+
 
 <p>Our lives were completely different before 2020. No masks, quarantines, social distancing and much more. In December, retail deals succumbed to the third consecutive month and cafés shed almost 500,000 positions. In any case, Americans keep on gobbling up hardware and other locally established merchandise and their bosses are as yet purchasing gear to reinforce their remote work arrangements, Williamson says. Organizations, in the interim, are recharging their inventories in the wake of drawing them down considerably at the beginning of the pandemic. Numerous huge retailers, for example, Walmart are paying charges for makers to speed conveyances by shipping items straightforwardly to stores rather than dissemination focuses. The stores can likewise satisfy neighborhood internet business arranges all the more quickly. The arrangements could proclaim another conveyance model that stretches out past the pandemic. More modest retailers that didn't pay makers when their shipments were deferred could battle to acquire items.</p>
 
