--- a/2020.html
+++ b/2020.html
@@ -29,7 +29,13 @@
     <iframe frameborder="0" src="navigation.html"  width = "756" height = "80"></iframe>
     <h3 style ="margin-top: 2px; margin-bottom: 4px;">What happened in 2020?</h3>
 
-    <img src="CargoD.jpg" alt="front" width = "756" height = "400"> 
+
+    <picture>
+      <source srcset="CargoD_optimized.jpeg" media="(min-width:767px)"/>
+      <img src="CargoD.jpeg" alt="Cargo Picture for 2020" width = "756" height = "400"> 
+    </picture>
+
+    
 
     
 
