--- a/Resources.html
+++ b/Resources.html
@@ -96,7 +96,16 @@
     <h1>Shipment Delays Causes</h1>
     <iframe frameborder="0" src="navigation.html" width = "757" height = "80"></iframe>
     <h2 style ="margin-bottom:4px; margin-top:2px;"> Resources</h2>
-    <img src="infopic.jpg" alt="Information banner" width = "750" height = "400">
+
+
+    <picture>
+      <source srcset="infopic.jpeg" media="(min-width:767px)"/>
+      <img src="infopic.jpeg" alt="Information banner" width = "750" height = "400">
+    </picture>
+    
+    
+
+
     <p> Here you will find external resources to do reseach on your own. </p>
 
     <h4>Text References</h4>
