--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -28,8 +28,13 @@
     
     <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
     <h2> Stay up to date </h2> 
-    <img src="contact.jpg" alt="front" width = "700" height = "300"> 
 
+
+    <picture>
+        <source srcset="contact.jpeg" media="(min-width:767px)"/>
+        <img src="contact.jpeg" alt="front" width = "700" height = "300"> 
+    </picture>
+      
 
     <h4>Fill out this form </h4>
     <form> 
