--- a/Solutions.html
+++ b/Solutions.html
@@ -30,7 +30,15 @@
 
     <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
     <h2> Possible solutions to combat shipments delays </h2>
-    <img src="CargoC.jpg" alt="front" width = "900" height = "500"> 
+
+
+
+    <picture>
+        <source srcset="CargoC.jpeg" media="(min-width:767px)"/>
+        <img src="CargoC.jpeg" alt="Cargo Solution Picture" width = "756" height = "400">  
+    </picture>
+
+
     <br><br><br><br>
     
     <h4>Overview</h4>
