--- a/2020.html
+++ b/2020.html
@@ -26,7 +26,7 @@
 
     <h1> Shipment Delays in 2020 </h1>
     <!--comment syntax-->
-    <iframe frameborder="0" src="navigation.html"  width = "756" height = "80"></iframe>
+    <iframe frameborder="0" src="navigation.html"  width = "100%" height = "80"></iframe>
     <h3 style ="margin-top: 2px; margin-bottom: 4px;">What happened in 2020?</h3>
 
 
