--- a/2021.html
+++ b/2021.html
@@ -27,7 +27,7 @@
     <h1> Shipment Delays in 2021 </h1>
     <!--comment syntax-->
 
-    <iframe frameborder="0" src="navigation.html" width = "756" height = "80"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "100%" height = "80"></iframe>
    
     <h4>How have shipment delays affected 2020?</h4>
     
