--- a/Resources.html
+++ b/Resources.html
@@ -94,7 +94,7 @@
 
 <body>
     <h1>Shipment Delays Causes</h1>
-    <iframe frameborder="0" src="navigation.html" width = "757" height = "80"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "100%" height = "80"></iframe>
     <h2 style ="margin-bottom:4px; margin-top:2px;"> Resources</h2>
 
 
