--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -26,7 +26,7 @@
 <body>
     <h1> <strong>Shipment Delays Causes </strong></h1>
     
-    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "100%" height = "80"></iframe>
     <h2> Stay up to date </h2> 
 
 
