--- a/Solutions.html
+++ b/Solutions.html
@@ -28,7 +28,7 @@
     <!--comment syntax-->
     <!--https://www.w3schools.com/css/css_howto.asp-->
 
-    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "100%" height = "80"></iframe>
     <h2> Possible solutions to combat shipments delays </h2>
 
 
