--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ input[ type = submit]:active {
     <picture>
       <source srcset="main1_optimized.jpeg" media="(min-width:767px)"/>
       <source srcset="main1.jpeg" media="(min-width:767px)"/>
-      <img src="main1.jpg" alt="front" width = "844px" height = "390px"> 
+      <img src="main1.jpg" alt="front" class =".deafultSzImg"> 
     
     </picture>
 
