--- a/2019.html
+++ b/2019.html
@@ -36,8 +36,8 @@
 
 
 <picture>
-  <source srcset="CargoB_optimized.jpeg" media="(min-width:767px)"/>
-  <img src="CargoB.jpeg" alt="Cargo picture 1" width = "756" height = "300">
+  <source srcset="CargoB_optimized.jpeg" media="(min-max:400px)"/>
+  <img src="CargoB.jpeg" alt="Cargo picture 1" id = "sizePic19">
 </picture>
 
  
