--- a/2020.html
+++ b/2020.html
@@ -31,8 +31,8 @@
 
 
     <picture>
-      <source srcset="CargoD_optimized.jpeg" media="(min-width:767px)"/>
-      <img src="CargoD.jpeg" alt="Cargo Picture for 2020" width = "756" height = "400"> 
+      <source srcset="CargoD_optimized.jpeg" media="(min-max:400px)"/>
+      <img src="CargoD.jpeg" alt="Cargo Picture for 2020" id = "sizePic20"> 
     </picture>
 
     
@@ -44,8 +44,8 @@
     
     </p>
     <p>A few manufacturing plants in the U.S. also abroad are covered while numerous others are running at the halfway limit in view of representative COVID-19 cases or social separating necessities. Ports, distribution centers, and shipping organizations are comparatively wrestling with specialist unlucky deficiencies. Furthermore, compartments for abroad shipments are hard to come by. Indeed, even the rollout of COVID-19 immunizations is assuming apart, taking up transportation limits and easing back different conveyances.</p>
-
-    <iframe width="700" height="400" src="https://www.youtube.com/embed/nBQ3lOkaAI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <!-- Youtube video 
+    <iframe width="700" height="400" src="https://www.youtube.com/embed/nBQ3lOkaAI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
 
 
