--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=500, initial-scale=1.0">
+    <meta name="viewport" content="width=400px, initial-scale=1.0">
     <title>Shipment Delays</title>
     <link rel="stylesheet" href="style.css">
     <link rel = "icon" type = "png" href = "logo.png" />
@@ -40,9 +40,9 @@ input[ type = submit]:active {
 
 
     <picture>
-      <source srcset="main1_optimized.jpeg" media="(min-width:767px)"/>
-      <source srcset="main1.jpeg" media="(min-width:767px)"/>
-      <img src="main1.jpg" alt="front" class =".deafultSzImg"> 
+      <source srcset="main1_optimized.jpeg" media="(min-max:400px)"/>
+      <source srcset="main1.jpg" media="(min-width:767px)"/>
+      <img src="main1.jpg" alt="front" id = "sizePic"> 
     
     </picture>
 
