--- a/2021.html
+++ b/2021.html
@@ -34,8 +34,8 @@
 
 
     <picture>
-      <source srcset="Canal.jpeg" media="(min-width:767px)"/>
-      <img src="Canal.jpeg" alt="Canal Suarez 2021" width = "756" height = "400"> 
+      <source srcset="Canal.jpeg" media="(min-max:400px)"/>
+      <img src="Canal.jpeg" alt="Canal Suarez 2021" id = "sizePic21"> 
     </picture>
     
    
@@ -48,7 +48,8 @@
  
     
     <h4>2021 Cargo Situation</h4>
-   <iframe width="700" height="400" src="https://www.youtube.com/embed/E7t5yj1rScI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!--Youtube Video
+   <iframe width="700" height="400" src="https://www.youtube.com/embed/E7t5yj1rScI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
    
    <br> 
    <br> 
