--- a/2021.html
+++ b/2021.html
@@ -48,8 +48,10 @@
  
     
     <h4>2021 Cargo Situation</h4>
-    <!--Youtube Video
-   <iframe width="700" height="400" src="https://www.youtube.com/embed/E7t5yj1rScI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+    
+   <iframe width="700" height="400" src="https://www.youtube.com/embed/E7t5yj1rScI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <p> During the coronavirus outbreak, and with the holidays approaching, overcrowded cargo ships have become stalled in port traffic, strangling the economy. Container delays have become both a symptom and a cause of global supply chain issues. But, looking back, freight has typically moved more easily and cheaply since these enormous boxes arrived, making them nearly crucial to the global economy.</p>
+   <p></p>
    
    <br> 
    <br> 
