--- a/Solutions.html
+++ b/Solutions.html
@@ -90,7 +90,8 @@
     </ol>
     <br>  <br>
     <h4> FlexPort</h4>
-    
+    <p> FlexPort is a company that have evolutionized the world of  shipment and cargo. </p>
+
     <ol style = "font-size: 20px;"> 
         <li> What are the guarantees that products will arrive in time?<br>There are no guarantees that products will arrive on time. When you are shipping internationally especially, there are so many complex processes and steps involved that at any point in time, something can happen to cause a delay (whether it's controllable or uncontrollable).<br> <br> </li>
         
