--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ input[ type = submit]:active {
     <h1> <strong>Shipment Delays Causes </strong></h1>
     <!--comment syntax-->
 
-    <iframe  frameborder="0" src="navigation.html" width = "100%" height = "80" > </iframe>
+    <iframe  frameborder="0" src="navigation.html" width = "100%" height = "80" >
+      <source srcset="navigation1.html" media="(min-max:400px)"/>
+      
+    </iframe>
   
     <h4> Are packages being delivered late? Noticed the lack of products in stores? 
     </h4>
