--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=400px, initial-scale=1.0">
     <title>Shipment Delays</title>
@@ -23,9 +23,9 @@ input[ type = submit]:active {
 </style>
 <body>
   
-    <h1> <strong>Shipment Delays Causes </strong></h1>
+    
     <!--comment syntax-->
-
+    <h1> <strong>Shipment Delays Causes <a href="index.html" target="_parent"><img  src="logo.png" alt = "Company Logo" width = "90px" height = "90px" align= "left"    ></a> </strong></h1>
     <iframe  frameborder="0" src="navigation.html" width = "100%" height = "80" >
       <source srcset="navigation1.html" media="(min-max:400px)"/>
       
