--- a/2020.html
+++ b/2020.html
@@ -24,7 +24,13 @@
   </style>
 <body>
 
-    <h1> Shipment Delays in 2020 </h1>
+  
+
+    <h1> <strong> Shipment Delays in <span class ="h2T">  2020</span>  
+      
+      
+      <a href="index.html" target="_parent"><img  src="logo.png" alt = "Company Logo" width = "90px" height = "90px" align= "left"    ></a> </strong></h1>
+   
     <!--comment syntax-->
     <iframe frameborder="0" src="navigation.html"  width = "100%" height = "80"></iframe>
     <h3 style ="margin-top: 2px; margin-bottom: 4px;">What happened in 2020?</h3>
@@ -45,7 +51,7 @@
     </p>
     <p>A few manufacturing plants in the U.S. also abroad are covered while numerous others are running at the halfway limit in view of representative COVID-19 cases or social separating necessities. Ports, distribution centers, and shipping organizations are comparatively wrestling with specialist unlucky deficiencies. Furthermore, compartments for abroad shipments are hard to come by. Indeed, even the rollout of COVID-19 immunizations is assuming apart, taking up transportation limits and easing back different conveyances.</p>
 
-    <iframe width="350" height="300" src="https://www.youtube.com/embed/nBQ3lOkaAI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="700" height="400" src="https://www.youtube.com/embed/nBQ3lOkaAI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <p>The Highway System has increased by 25% in the last two years, from $12 billion in 2017 to over $15 billion in 2019, while the cost of congestion on the top 10 bottlenecks has increased by 11% in just one year (from $761.8 million in 2018 to $848.4 million in 2019), and 26 states have annual congestion costs of $500 million or more. In 2019, highway freight shipments were delayed for over 658,854,025 million hours, with the Interstate Highway System accounting for almost a third of those hours (36 percent).</p>
 
