--- a/2021.html
+++ b/2021.html
@@ -24,7 +24,14 @@
   </style>
 <body>
  
-    <h1> Shipment Delays in 2021 </h1>
+  
+
+
+    <h1> <strong> Shipment Delays in <span class ="h2T">  2021</span>  
+      
+      
+      <a href="index.html" target="_parent"><img  src="logo.png" alt = "Company Logo" width = "90px" height = "90px" align= "left"    ></a> </strong></h1>
+   
     <!--comment syntax-->
 
     <iframe frameborder="0" src="navigation.html" width = "100%" height = "80"></iframe>
