--- a/Resources.html
+++ b/Resources.html
@@ -39,7 +39,7 @@
     margin-top: 2px;
   }
   body{
-      background-color: #fffffe
+      background-color: #F8F4EE
   }
 
 
@@ -99,7 +99,10 @@
 
 
 <body>
-    <h1>Shipment Delays Causes</h1>
+    
+
+    <h1> <strong>Shipment Delays Causes <a href="index.html" target="_parent"><img  src="logo.png" alt = "Company Logo" width = "90px" height = "90px" align= "left"    ></a> </strong></h1>
+    
     <iframe frameborder="0" src="navigation.html" width = "100%" height = "80"></iframe>
     <h2 style ="margin-bottom:4px; margin-top:2px;"> Resources</h2>
 
