--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
 input[ type = submit]:active {
   background-color: #85c6f5;
 }
+div{
+  text-align:center;
+}
 </style>
+
 <body>
   
     
-    <!--comment syntax-->
+    <!--div tag center text -->
     <h1> <strong>Shipment Delays Causes <a href="index.html" target="_parent"><img  src="logo.png" alt = "Company Logo" width = "90px" height = "90px" align= "left"    ></a> </strong></h1>
     <iframe  frameborder="0" src="navigation.html" width = "100%" height = "80" >
       <source srcset="navigation1.html" media="(min-max:400px)"/>
       
     </iframe>
-  
+    <div>
     <h4> Are packages being delivered late? Noticed the lack of products in stores? 
     </h4>
 
@@ -52,10 +56,6 @@ input[ type = submit]:active {
 
 
 
-
-
-
-
   
 
     <p>We may think, this doesn't impact me because I don't shop online. However, this is the complete opposite, it has targeted our economy. The disruption of the market brings higher prices. With the multiple variants, Delta, Omicron, Flurona, etc. Now, we must work together to find a solution and combat this issue. When the quantity of new COVID-19 cases begins to decline, limit imperatives and work deficiencies should ease, taking a portion of the strain off supply chains and conveyance times. In any case, a few specialists accept that there's probably not going to be quick help from inventory network disturbances. Raised requests during the Christmas season in a portion of the world's biggest economies, one more rush of new COVID-19 cases, and outrageous climate occasions, assuming they emerge, could cause inventory network disturbances.</p>
@@ -65,7 +65,7 @@ input[ type = submit]:active {
    
     <hr> 
 
- 
+  </div>
     <footer>
 
       <style>
@@ -100,6 +100,6 @@ input[ type = submit]:active {
           </form>
 
     </footer>
-
+  
 </body>
 </html>
