--- a/2019.html
+++ b/2019.html
@@ -7,7 +7,7 @@
     <title>Shipment Delays</title>
     <link rel="stylesheet" href="style.css">
     <link rel = "icon" type = "png" href = "logo.png" />
-</head>
+
 <style>
   a:hover{
   text-decoration: underline;
@@ -24,8 +24,9 @@
   }
   
 </style>
+</head>
 <body>
-  
+  <div class = "mainDiv">
  <!--needs fixing -->
 
     <h1> <strong> Shipment Delays in <span class ="h2T">  2019</span>  
@@ -50,14 +51,13 @@
 
 
 
-<p>Our lives were completely different before 2020. No masks, quarantines, social distancing and much more. In December, retail deals succumbed to the third consecutive month and cafés shed almost 500,000 positions. In any case, Americans keep on gobbling up hardware and other locally established merchandise and their bosses are as yet purchasing gear to reinforce their remote work arrangements, Williamson says. Organizations, in the interim, are recharging their inventories in the wake of drawing them down considerably at the beginning of the pandemic. Numerous huge retailers, for example, Walmart are paying charges for makers to speed conveyances by shipping items straightforwardly to stores rather than dissemination focuses. The stores can likewise satisfy neighborhood internet business arranges all the more quickly. The arrangements could proclaim another conveyance model that stretches out past the pandemic. More modest retailers that didn't pay makers when their shipments were deferred could battle to acquire items.</p>
 
-<p>Most customers aren't interested in long explanations when there's a delivery problem. They simply want to know how you intend to address the issue. This is frequently the deciding factor in whether or not you can keep a customer; if you play your cards correctly, outstanding customer service may help you establish brand loyalty even in the face of adversity, such as late delivery. However, if the situation is handled badly, you're unlikely to see that customer again.</p>
 
-<p>UPS has boosted the amount of trucks on the road and has dispatched employees' own automobiles to assist with deliveries. According to a UPS press statement, it also aims to add 100,000 seasonal employees to work as package handlers, drivers, driver helpers, and personal vehicle drivers. UPS's year-over-year dip was less pronounced than FedEx's, falling to 80% from 86 percent during the first half of the 2018 Christmas season. Meanwhile, the USPS's on-time delivery rate increased by 13% to 86 percent in 2019, up from 76 percent in 2018. </p>
+<p>Although, shipments weren't as bad as in 2022. We must remember the conflicts between USA and China. These trade tensions affected about 2% of the maritime trade volume. Economies from developing countries were expecting at least a 30% of decrease. The sailing cargo to reduce the carbon footprint plan from 2008 was corrupted immediately after seeing the new effects of Covid at the end of November. Thought, the environment is more important. Measures needed to be taken as experts analyze the possibility of the pandemic. </p>
+
 
 <br> 
-</body>
+
 <hr>  
 
 <footer>
@@ -81,5 +81,6 @@
       </form>
 
 </footer>
-
+</div>
+</body>
 </html>
