--- a/Survey.html
+++ b/Survey.html
@@ -25,7 +25,7 @@
 
 </style>
 <body>
-  
+  <div class = "mainDiv">
     
     <!--comment syntax-->
     <h1> <strong>Shipment Delays Causes <a href="index.html" target="_parent"><img  src="logo.png" alt = "Company Logo" width = "90px" height = "90px" align= "left"    ></a> </strong></h1>
@@ -228,7 +228,7 @@
       </form>
       <br><br>
       <hr>
-      </body>
+     
 
       <footer>
         <p style = "margin-bottom:3px; color:#094067; font-weight: bold;" > || Maria Yagual ||  <a  href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org || </a> </p>
@@ -251,5 +251,7 @@
             </form>
   
       </footer>
-</html>
+      </div>
+    </body>
+    </html>
 
